--- a/styles/style.css
+++ b/styles/style.css
@@ -17,11 +17,10 @@
     font-family: Overpass;
 }
 
-
-
 a, a:visited {
     color: var(--white);
 }
+
 a:hover {
     color: var(--primary-color);
 }
@@ -30,7 +29,7 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 45px;
+    min-height: 45px;
     border-radius: 45px;
     outline: none;
     border: none;
@@ -56,7 +55,7 @@ body {
     background-color: var(--very-dark-blue);
 
 }
-
+/* Main Section */
 main {
 
     display: flex;
@@ -65,7 +64,7 @@ main {
     align-items: center;
     min-height: 90vh;
 }
-
+/* Footer Section */
 footer {
     padding: 10px;
     display: flex;
@@ -74,24 +73,60 @@ footer {
     justify-content: center;
     color: var(--light-gray);
 }
-
+/* Rating component 
+-------------------------*/
 .card {
     background-color: var(--medium-dark-blue);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    min-width: 280px;
     width: 90%;
-    min-width: 335px;
+    max-width: 385px;
     border-radius: 15px;
     padding: 20px; 
     padding-bottom: 40px; 
     gap: 1.5rem;
 }
+/* Thank you state */
 .card.thank-you{
     display: none;
     padding-top: 40px;
     text-align: center; 
 }
+/* Thank you paragraph */
+p.review {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--dark-blue);
+    color: var(--primary-color);
+    border-radius: 2rem;
+    min-height: 2rem;
+}
+
+/* Component Header and Paragraph */
+.card h2 {
+    color: var(--white);
+}
+
+.card p {
+
+    line-height: 1.3;
+    font-size: 15px;
+    color: var(--light-gray);
+}
+
+/* Rating Buttons Section 
+---------------------*/
+
+/* Rating buttons container */
+.ratings {
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+
 .icon-star, .rating {
     display: flex;
     justify-content: center;
@@ -101,13 +136,6 @@ footer {
     width: 45px;
     height: 45px;
     border-radius: 50%;
-}
-
-.ratings {
-    display: flex;
-    justify-content: space-around;
-    gap: 20px;
-    list-style: none;
 }
 
 .rating {
@@ -125,33 +153,4 @@ footer {
     color: var(--white);
 }
 
-.card h2 {
-    color: var(--white);
-}
-.card p {
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    line-height: 1.3;
-    font-size: 15px;
-    color: var(--light-gray);
-}
 
-p.review {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--dark-blue);
-    color: var(--primary-color);
-    border-radius: 2rem;
-    height: 2rem;
-}
-
-
-@media (min-width: 375px) {
-    .card{
-        padding: 30px;
-        max-width: 385px;
-    }
-}
